<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <FrameLayout
        android:id="@+id/frameHeader"
        android:background="@color/primary"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="180dp">
            <TextView
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="@dimen/headerTextSize"
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </FrameLayout>

    <TextView
        android:id="@+id/tvHeader"
        android:text="@string/login"
        android:gravity="center"
        android:fontFamily="@font/montserrat"
        android:textSize="@dimen/titleTextSize"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/frameHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="30dp"
        app:errorEnabled="true"
        android:hint="@string/prompt_email"
        android:fontFamily="@font/montserrat"
        android:selectAllOnFocus="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHeader">

        <EditText
            android:id="@+id/etUsername"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/montserrat"
            android:autofillHints="@string/prompt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/prompt_password"
        app:errorEnabled="true"
        android:fontFamily="@font/montserrat"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:selectAllOnFocus="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilUsername">

        <EditText
            android:id="@+id/etPassword"
            android:inputType="textPassword"
            android:fontFamily="@font/montserrat"
            android:autofillHints="@string/prompt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvForgetPassword"
        android:text="@string/forget_password"
        android:padding="5dp"
        android:layout_marginHorizontal="24dp"
        android:fontFamily="@font/montserrat"
        android:foreground="?attr/selectableItemBackground"
        android:textSize="@dimen/normalTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnLogin"
        android:text="@string/action_sign_in"
        android:fontFamily="@font/montserrat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="50dp"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/button_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgetPassword"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/tvRegister"
        android:text="@string/create_an_account"
        android:padding="5dp"
        android:fontFamily="@font/montserrat"
        android:textSize="@dimen/normalTextSize"
        android:foreground="?attr/selectableItemBackground"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>