<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBinActivity">

    <FrameLayout
        android:id="@+id/frameHeader"
        android:background="@color/primary"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imgBackBtn"
                android:src="@drawable/ic_back"
                android:contentDescription="@string/back_button"
                android:layout_width="24dp"
                android:layout_marginLeft="24dp"
                android:layout_gravity="center_vertical"
                android:layout_height="24dp"/>
            <TextView
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:textSize="@dimen/titleTextSize"
                android:text="@string/add_bin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </FrameLayout>

    <ScrollView
        app:layout_constraintTop_toBottomOf="@id/frameHeader"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilBinName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="30dp"
                app:errorEnabled="true"
                android:hint="@string/prompt_bin_name"
                android:fontFamily="@font/montserrat"
                android:selectAllOnFocus="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/etBinName"
                    android:inputType="textCapWords"
                    android:fontFamily="@font/montserrat"
                    android:autofillHints="@string/prompt_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilBinDesc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="8dp"
                app:errorEnabled="true"
                android:hint="@string/prompt_bin_desc"
                android:fontFamily="@font/montserrat"
                android:selectAllOnFocus="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilBinName">

                <EditText
                    android:id="@+id/etBinDesc"
                    android:inputType="textCapWords"
                    android:fontFamily="@font/montserrat"
                    android:autofillHints="@string/prompt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnAddBin"
                android:text="@string/action_add_bin"
                android:fontFamily="@font/montserrat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="50dp"
                android:layout_marginHorizontal="24dp"
                android:background="@drawable/button_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilBinDesc"
                app:layout_constraintVertical_bias="0.05" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>