<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <FrameLayout
        android:id="@+id/frameHeader"
        android:background="@color/primary"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imgBackBtn"
                android:src="@drawable/ic_back"
                android:contentDescription="@string/back_button"
                android:layout_width="24dp"
                android:layout_marginLeft="24dp"
                android:layout_gravity="center_vertical"
                android:layout_height="24dp"/>
            <TextView
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:textSize="@dimen/titleTextSize"
                android:text="@string/profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </FrameLayout>

    <ScrollView
        app:layout_constraintTop_toBottomOf="@id/frameHeader"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/imgProfile"
                android:src="@drawable/no_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="15dp"
                android:layout_width="80dp"
                android:layout_height="80dp"/>

            <ImageButton
                android:id="@+id/btnBrowseImage"
                android:background="@drawable/upload_button"
                android:src="@android:drawable/ic_menu_camera"
                app:layout_constraintBottom_toBottomOf="@id/imgProfile"
                android:contentDescription="@string/upload_image"
                app:layout_constraintEnd_toEndOf="@id/imgProfile"
                app:layout_constraintStart_toEndOf="@id/imgProfile"
                android:layout_width="32dp"
                android:layout_height="28dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilFirstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="13dp"
                app:errorEnabled="true"
                android:hint="@string/prompt_first_name"
                android:fontFamily="@font/montserrat"
                android:selectAllOnFocus="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgProfile">

                <EditText
                    android:id="@+id/etFirstName"
                    android:inputType="textCapWords"
                    android:fontFamily="@font/montserrat"
                    android:autofillHints="@string/prompt_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilLastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="8dp"
                app:errorEnabled="true"
                android:hint="@string/prompt_last_name"
                android:fontFamily="@font/montserrat"
                android:selectAllOnFocus="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilFirstName">

                <EditText
                    android:id="@+id/etLastName"
                    android:inputType="textCapWords"
                    android:fontFamily="@font/montserrat"
                    android:autofillHints="@string/prompt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="8dp"
                app:errorEnabled="true"
                android:hint="@string/prompt_email"
                android:fontFamily="@font/montserrat"
                android:selectAllOnFocus="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilLastName">

                <EditText
                    android:id="@+id/etEmail"
                    android:inputType="textEmailAddress"
                    android:fontFamily="@font/montserrat"
                    android:autofillHints="@string/prompt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/radioGender"
                android:layout_marginHorizontal="24dp"
                app:layout_constraintTop_toBottomOf="@id/tilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/gender"
                    android:textSize="@dimen/titleTextSize"
                    android:fontFamily="@font/montserrat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilGender"
                    app:errorEnabled="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <RadioButton
                    android:id="@+id/radioMale"
                    android:text="@string/male"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:text="@string/female"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <RadioButton
                    android:id="@+id/radioOther"
                    android:text="@string/other"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </RadioGroup>

            <Button
                android:id="@+id/btnProfileUpdate"
                android:text="@string/action_update"
                android:fontFamily="@font/montserrat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="50dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/button_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGender"
                app:layout_constraintVertical_bias="0.05" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>