<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.ForgetPasswordActivity">


    <FrameLayout
        android:id="@+id/frameHeader"
        android:background="@color/primary"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="180dp">
        <TextView
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/headerTextSize"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/toolbar"
        android:background="@color/primary"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imgBackBtn"
                android:src="@drawable/ic_back"
                android:contentDescription="@string/back_button"
                android:layout_width="24dp"
                android:layout_marginLeft="24dp"
                android:layout_gravity="center_vertical"
                android:layout_height="24dp"/>
            <TextView
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/white"
                android:textSize="@dimen/titleTextSize"
                android:textAllCaps="true"
                android:text="@string/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </FrameLayout>

    <TextView
        android:id="@+id/tvHeader"
        android:text="@string/forget_password"
        android:gravity="center"
        android:fontFamily="@font/montserrat"
        android:textSize="@dimen/titleTextSize"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/frameHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvCaption"
        android:text="@string/forget_password_caption"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat"
        android:layout_marginHorizontal="24dp"
        android:textSize="@dimen/normalTextSize"
        app:layout_constraintTop_toBottomOf="@id/tvHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="30dp"
        app:errorEnabled="true"
        android:hint="@string/prompt_email"
        android:fontFamily="@font/montserrat"
        android:selectAllOnFocus="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCaption">

        <EditText
            android:id="@+id/etUsername"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/montserrat"
            android:autofillHints="@string/prompt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnRequest"
        android:text="@string/action_request"
        android:fontFamily="@font/montserrat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="50dp"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/button_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilUsername"
        app:layout_constraintVertical_bias="0.05" />

</androidx.constraintlayout.widget.ConstraintLayout>